@@ -19,6 +19,7 @@ repositories {
     }
 }
 
+
 dependencies {
     implementation(
             'com.jfoenix:jfoenix:9.0.9',
@@ -29,6 +30,8 @@ dependencies {
 
             'org.slf4j:slf4j-api:1.7.30',
             'org.slf4j:slf4j-simple:1.7.30',
+
+
     )
 
     testImplementation(
@@ -42,9 +45,12 @@ dependencies {
     implementation 'junit:junit:4.12'
     implementation 'junit:junit:4.12'
 
+
     compile 'org.slf4j:slf4j-simple:1.6.+'
     compile 'com.sparkjava:spark-core:2.5.+'
     compile 'com.twilio.sdk:twilio:7.+'
+
+
 
     compile 'com.google.cloud:google-cloud-translate:1.94.5'
 }
@@ -53,6 +59,9 @@ javafx {
     version = "11"
     modules = ['javafx.controls', 'javafx.fxml']
 }
+
+
+
 
 
 test {
@@ -68,16 +77,7 @@ jar {
     }
 }
 
-run {
-    jvmArgs = ['--add-opens=javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
-               '--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED',
-               '--add-opens=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED',
-               '--add-opens=javafx.base/com.sun.javafx.binding=ALL-UNNAMED',
-               '--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED',
-               '--add-opens=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED',
-               '--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED'
-    ]
-}
+
 //
 //jacoco {
 //    toolVersion = "0.8.4"
